Adding Statistics Canada exam notebook

--- a/Statistics Canada Exam.ipynb
+++ b/Statistics Canada Exam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ec9b6a2",
+   "id": "d75623e3",
    "metadata": {},
    "source": [
     "# Statistics Canada Assignment: Machine Learning\n",
@@ -36,12 +36,12 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import entropy\n",
     "from scipy.special import entr\n",
-    "from sklearn.calibration import CalibratedClassifierCV\n"
+    "from sklearn.calibration import CalibratedClassifierCV"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5cd35072",
+   "id": "7bd64344",
    "metadata": {},
    "source": [
     "# Task 1 - Build a function that converts a labelled dataset into labelled and unlabelled subsets"
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caf60f0d",
+   "id": "3bcaede8",
    "metadata": {},
    "source": [
     "# Task 4 - Build a partially labelled dataset"
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48cc78a9",
+   "id": "777fd1d7",
    "metadata": {},
    "source": [
     "# Task 5 - Create train/validation split function"
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c36cdbef",
+   "id": "417a1649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "082e5ece",
+   "id": "3efcefd0",
    "metadata": {},
    "source": [
     "# Task 6 - Create experiments to convince clients that more labelled data will improve model performance"
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "c7fac485",
+   "id": "e352d668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,14 +360,13 @@
     "    X_train, y_train, X_test, y_test = train_val_split(dataset_inputs, dataset_labels, train_proportion)\n",
     "    clf.fit(X_train, y_train)\n",
     "    y_pred = clf.predict(X_test)\n",
-    "    accuracy.append(accuracy_score(y_test, y_pred))\n",
-    "\n"
+    "    accuracy.append(accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "e4045e41",
+   "id": "7645268e",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5da01d2f",
+   "id": "a2d6375b",
    "metadata": {},
    "source": [
     "As shown from the accuracy curve above, the larger the training set, the better the accuracy. Based on the accuracy performance metric, it is clear that having more labelled data for training will likely improve the accuracy of the prediciton model."
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41e016ac",
+   "id": "3bab7a37",
    "metadata": {},
    "source": [
     "# Task 7 - Active learning to select new instances to be labelled"
@@ -412,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "9474f2cc",
+   "id": "5d35e1cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5310c655",
+   "id": "2ebf6160",
    "metadata": {},
    "source": [
     "# Task 8 - Final model training and evalution"
@@ -461,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "e83e84e5",
+   "id": "a44bf555",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "07c5f62f",
+   "id": "52efe54f",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f0483f",
+   "id": "65efe784",
    "metadata": {},
    "source": [
     "As can be shown from the above accuracy figure, there is an improvement with the extended set of labelled data. This confirms the hypothesis that the decision for labelling more data was correct. There are few points that should be mentioned:\n",
